Solved problem with name not showing

--- a/code/src/components/Styles.scss
+++ b/code/src/components/Styles.scss
@@ -54,6 +54,7 @@ body {
   &__input {
     width: 100%;
     padding: 5px;
+    font-family: menlo;
 
     &::-webkit-input-placeholder {
       color: $pink;
